Update alert message

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       document.body.appendChild(script);
     </script>
     <script type="text/javascript">
-      alert("Hello! Welcome to SelecNatProj !\n\nInside the simulation, the numbers 1 to 7 can be used to change the speed of the simulation.\nThe ESC key can be used to go back to the menu.\n\n Enjoy! :)");
+      alert("Hello! Welcome to SelecNatProj !\n\nInside the simulation, the numbers 1 to 7 can be used to change the speed of the simulation.\nThe ESC key can be used to go back to the menu.\nThe SPACEBAR enables the the first person view\n\nEnjoy! :)");
     </script>
   </body>
 </html>
